Playing around with prefix-free.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -141,18 +141,18 @@ ul.tab_menu {
         padding: 16px 4px;
         background: $tab_idle_color;
         box-shadow:0px 0px 8px rgba(0,0,0,.6);
-        -webkit-transition: all .25s ease;
+        transition: all .25s ease;
     }
     li:hover {
         background: $tab_hover_color;
         margin-top: -2px; margin-bottom: 2px;
         box-shadow: 0px 0px 0px rgba(0, 0, 0, .6);
-        -webkit-transition: all .25s ease;
+        transition: all .25s ease;
     }
     li.open {
         @include open_tab_base;
         box-shadow: 0px 0px 0px rgba(0, 0, 0, .6);
-        -webkit-transition: all .25s ease;
+        transition: all .25s ease;
     }
     li.open:hover { //Here to make sure open tabs don't hover
         @include open_tab_base;
