Interaction options added to Control Pane

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -97,14 +97,14 @@ div.content_pane {
     .jq_button {
         font-size: .7em;
     }
-}
-#hz_slider {
-    display: inline-block;
-    cursor: pointer;
-    width: 100%;
-    font-size: .5em;
-}
 
+    .jq_slider {
+        display: inline-block;
+        cursor: pointer;
+        width: 100%;
+        font-size: .5em;
+    }
+}
 
 /*HELP PANE
 -----*/
