Quick fixes (broken link, CSS, missing link)
Also got index.html coppied over from the mouse-interaction update.

--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -3,7 +3,8 @@
 body {
   font-family: Arial, Verdana, sans-serif;
   overflow: hidden;
-  color: #eaecec; }
+  color: #eaecec;
+  font-size: 90%; }
 
 p {
   text-indent: 1em;
